--- a/_posts/2019-09-23-linear.md
+++ b/_posts/2019-09-23-linear.md
@@ -9,4 +9,4 @@ The aim of the project was to come up with a predictive model that explains the 
  Following the initial pre-processing of the data, linear regression was employed to come up with a model that accurately described the driving force behind the money spent by customers.  A 70-30% split was done to generate development and validation datasets. The models developed by both development and validation sets gave numerically close R squared values indicating that the model developed was reliable. The drivers behind total amount spent were found to be the sector in which the customer was employed, whether he/she had a car on lease, and obviously the income earned. 
 
 
-The dataset, the R code and the detailed analysis report can be found [here].(https://github.com/SameeraSuhail1/Linear-Regression)
+The dataset, the R code and the detailed analysis report can be found [here](https://github.com/SameeraSuhail1/Linear-Regression)
