--- a/_posts/2019-09-23-logistic.md
+++ b/_posts/2019-09-23-logistic.md
@@ -13,4 +13,4 @@ Here is a ROC curve.
           
 <img src="{{ site.url }}{{ site.baseurl }}/images/Logistic/Auc.jpg" alt="ROC Curve">
 
-The R code and the report with the complete model estimation and evaluation can be found [here](https://github.com/SameeraSuhail1/Customer-Attrition-Management)
+The R code and the report with the complete model estimation and evaluation can be found [here](https://github.com/SameeraSuhail1/Customer-Attrition-Management).
