--- a/_posts/2019-10-02-fpga.md
+++ b/_posts/2019-10-02-fpga.md
@@ -29,7 +29,7 @@ The ScoreTask just printed the score that the ball sent it on the screen.
 
 As can be seen, the different tasks needed to communicate with each other. The Bat and Ball Tasks needed to know each other positions in order to detect collisions. The ScoreTask needed to know when the ball has collided with the bat and update the score accordingly. Two queues were created for these purposes- one to take care of each communication as shown below:
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/batpos.jpg" alt="Block Diagram">
+<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/batpos.jpg" alt="Queue 1">
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/score.jpg" alt="Block Diagram">
+<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/score.jpg" alt="Queue 2">
 
