--- a/_posts/2019-10-02-fpga.md
+++ b/_posts/2019-10-02-fpga.md
@@ -7,6 +7,9 @@ excerpt: "Hardware-Software Codesign"
 
 This particular project used the Zynq FPGA dual-core ARM processor. The hardware and software flow  made the use of Vivado and Software Development Kit (SDK) respectively as follows:
 
+
+![Flows](/images/embedded/bitfile.jpg)
+
 <img src="{{ site.url }}{{ site.baseurl }}/images/embedded/bitfile.jpg" alt="Flows">
 
 
