--- a/_posts/2019-10-02-fpga.md
+++ b/_posts/2019-10-02-fpga.md
@@ -8,9 +8,7 @@ excerpt: "Hardware-Software Codesign"
 This particular project used the Zynq FPGA dual-core ARM processor. The hardware and software flow  made the use of Vivado and Software Development Kit (SDK) respectively as follows:
 
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/segmentation/scree.jpg" alt="Scree Plot">
-
-<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/bitfile.jpg" alt="Flows">
+<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/bitfile.JPG" alt="Flows">
 
 
 The objective of the project was to develop a game of pong. The game had to have a single bat at the bottom of the screen controlled by the hardware and a ball that bounced off of the three walls and the bat. The game score incremented by one each time the ball hit the bat and the game session was said to be over once the ball missed the bat and left the screen.
@@ -20,7 +18,7 @@ The IP used were a PWM-based controller and a VGA display for game demonstartion
 
 The FPGA was programmed to add the VGA display and to continuously update the incoming pulse width coming from the controller's knob position. The block diagram of the connections between the Zynq board, VGA display and the PWM-based controller is shown below:
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/block.jpg" alt="Block Diagram">
+<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/block.JPG" alt="Block Diagram">
 
 Once the FPGA fabric on the board was programmed, SDK was used to test the functionality of the developed hardware. Three seperate tasks were created: BallTask, BatTask and ScoreTask. 
 The BatTask was responsible for linearly mapping the knob position (technically the period of the pulse coming from the knob) to the position of the bat on the screen, so that knob minimum mapped to the leftmost bat position and knob maximum mapped to the rightmost bat position on the screen. To begin with, we supplied the code with a rough estimate of the maximum and minimum values of the knob. As the game progressed and the newer values of pulse periods were detected, we updated the minimum and maximum values accordingly.
@@ -32,7 +30,7 @@ The ScoreTask just printed the score that the ball sent it on the screen.
 
 As can be seen, the different tasks needed to communicate with each other. The Bat and Ball Tasks needed to know each other positions in order to detect collisions. The ScoreTask needed to know when the ball has collided with the bat and update the score accordingly. Two queues were created for these purposes- one to take care of each communication as shown below:
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/batpos.jpg" alt="Queue 1">
+<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/batpos.JPG" alt="Queue 1">
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/score.jpg" alt="Queue 2">
+<img src="{{ site.url }}{{ site.baseurl }}/images/embedded/score.JPG" alt="Queue 2">
 
