--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -1,4 +1,13 @@
+---
+title: "Test Map"
+date: 2019-10-28
+tags: [Map]
+excerpt: "Leaflet"
+---
+
+
 Leaflet, R, Markdown, Jekyll and GitHub
+
 ================
 
 R Markdown
