remove warning/messages

--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -31,50 +31,7 @@ in terms of the denisty of basic amenities available in
 
 <!--/html_preserve-->
 
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-    ## although coordinates are longitude/latitude, st_intersection assumes that they are planar
-
-    ## although coordinates are longitude/latitude, st_nearest_feature assumes that they are planar
+  
 
 <!--html_preserve-->
 
@@ -121,14 +78,8 @@ Based on this observation, these houses can be grouped into undervalued
 and overvalued.The map shows the price residuals- the ones with most
 negative residuals are undervalued and are Â good deals for
 home-seekers.The ones with most positive residuals are overvalued and
-cost more than what the model
-    predicts.
+cost more than what the model predicts.
 
-    ## Warning: sf layer has inconsistent datum (+proj=longlat +ellps=WGS84 +no_defs).
-    ## Need '+proj=longlat +datum=WGS84'
-    
-    ## Warning: sf layer has inconsistent datum (+proj=longlat +ellps=WGS84 +no_defs).
-    ## Need '+proj=longlat +datum=WGS84'
 
 <!--html_preserve-->
 
