--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -9,15 +9,14 @@ excerpt: "Leaflet"
 
 The project aim is to analyse the geospatial data for the City of
 Melbourne and find their affect on house prices in that region.The
-datasets relating to Melbourne Cityâs Environment, Infrastructure and
-Economy are available on Open Data Melbourne
-<https://data.melbourne.vic.gov.au/>, while the house selling prices
-were obtained from
-<https://www.kaggle.com/anthonypino/melbourne-housing-market>.
+datasets relating to Melbourne City's Environment, Infrastructure and
+Economy are available on [Open Data Melbourne]
+(https://data.melbourne.vic.gov.au/), while the house selling prices
+were obtained from [kaggle]
+(https://www.kaggle.com/anthonypino/melbourne-housing-market)
 
 Firstly, we have attempted to find the good and bad areas in Melbourne
-in terms of the denisty of basic amenities available in
-    them.
+in terms of the denisty of basic amenities available in them.
 
 
 
@@ -31,7 +30,7 @@ in terms of the denisty of basic amenities available in
 
 <!--/html_preserve-->
 
-  
+The selling prices of houses in this region can be seen in the map below.
 
 <!--html_preserve-->
 
@@ -45,7 +44,7 @@ in terms of the denisty of basic amenities available in
 
 Using Linear Regression and Random Forests, there was found to be a
 dependance of house prices on their proximity to a few of those
-amenities. Linear Regressionâs results, being more easily interpretable,
+amenities. Linear Regression's results, being more easily interpretable,
 show the magnitude of dependance of each variable on the Price.
 
 | Variable               | Coefficient |
@@ -64,6 +63,8 @@ show the magnitude of dependance of each variable on the Price.
 Random Forests, being an ensemble learning technique, gave better
 results as can be seen in the following violin plot showing the
 distribution of residuals obtained from both algorithms.
+
+<img src="{{ site.url }}{{ site.baseurl }}/forgit_files/figure-gfm/violin-1.png" alt="True vs. Predicted">
 
 ![](forgit_files/figure-gfm/violin-1.png)<!-- -->
 
