--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -64,7 +64,7 @@ Random Forests, being an ensemble learning technique, gave better
 results as can be seen in the following violin plot showing the
 distribution of residuals obtained from both algorithms.
 
-<img src="{{ site.url }}{{ site.baseurl }}/forgit_files/figure-gfm/violin-1.png" alt="True vs. Predicted">
+<img src="{{ site.url }}{{ site.baseurl }}/images/map/violin-1.png" alt="True vs. Predicted">
 
 ![](forgit_files/figure-gfm/violin-1.png)<!-- -->
 
