--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -66,7 +66,7 @@ distribution of residuals obtained from both algorithms.
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/map/violin-1.PNG" alt="Violin Plot">
 
-![](forgit_files/figure-gfm/violin-1.png)<!-- -->
+![](images/map/violin-1.PNG)<!-- -->
 
 The scatter plot of the actual vs predicted price shows that our RF
 model is pretty accurate.
