--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -10,10 +10,8 @@ excerpt: "Leaflet"
 The project aim is to analyse the geospatial data for the City of
 Melbourne and find their affect on house prices in that region.The
 datasets relating to Melbourne City's Environment, Infrastructure and
-Economy are available on [Open Data Melbourne]
-(https://data.melbourne.vic.gov.au/), while the house selling prices
-were obtained from [kaggle]
-(https://www.kaggle.com/anthonypino/melbourne-housing-market)
+Economy are available on [Open Data Melbourne](https://data.melbourne.vic.gov.au/), while the house selling prices
+were obtained from [kaggle](https://www.kaggle.com/anthonypino/melbourne-housing-market)
 
 Firstly, we have attempted to find the good and bad areas in Melbourne
 in terms of the density of basic amenities available in them.
