--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -62,16 +62,16 @@ Random Forests, being an ensemble learning technique, gave better
 results as can be seen in the following violin plot showing the
 distribution of residuals obtained from both algorithms.
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/map/violin-1.PNG" alt="Violin Plot">
+<img src="{{ site.url }}{{ site.baseurl }}/images/map/violin-1.png" alt="Violin Plot">
 
-![](images/map/violin-1.PNG)<!-- -->
+
 
 The scatter plot of the actual vs predicted price shows that our RF
 model is pretty accurate.
 
 <img src="{{ site.url }}{{ site.baseurl }}/images/map/true_vs_pred-1.PNG" alt="True vs. Predicted">
 
-![](forgit_files/figure-gfm/true_vs_pred-1.png)<!-- -->
+
 
 For some houses, there is a significant difference between their actual
 selling price and the price our model predicts they should be sold for.
