--- a/_posts/2019-10-28-test.md
+++ b/_posts/2019-10-28-test.md
@@ -69,7 +69,7 @@ distribution of residuals obtained from both algorithms.
 The scatter plot of the actual vs predicted price shows that our RF
 model is pretty accurate.
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/map/true_vs_pred-1.PNG" alt="True vs. Predicted">
+<img src="{{ site.url }}{{ site.baseurl }}/images/map/true_vs_pred-1.png" alt="True vs. Predicted">
 
 
 
