--- a/_posts/2019-09-23-logistic.md
+++ b/_posts/2019-09-23-logistic.md
@@ -5,12 +5,15 @@ tags: [Classification]
 excerpt: "Data Science, Logistic Regression"
 ---
 
-The objective of the case study was to develop a predictive model to manage customer churn at a wireless telecom company. Once the model was developed, an incentive plan was made to encourage would-be-churners to remain with the company.
-The dataset consisted of 75 potential predictors and 71,047 customers. The data was divided into Calibration and Validation datasets having 40,000 and 31,047 customers respectively. An additional “Churn” variable indicated whether the customer left the company within two-months of observation or stayed. Although, the company had 2% churners at the time, to ensure a better estimation of the model, the Calibration dataset had been set to include roughly 50% churners. The validation dataset had the usual 2% churners. 
-Logistic Regression was employed to classify customers as churners or non-churners. The usual procedures were followed for development and model evaluation. The Concordance, Gain chart and Lift Chart indicated that the model was working satisfactorily and the churn rate was heavily dependent on a customer’s mean overage minutes of use, percentage change in minutes of use, months in service, handsets issued, age of the current equipment, and number of calls made to retention team.
+The objective of the case study was to develop a predictive model to manage customer churn at a wireless telecom company. Once the model was developed, an incentive plan was made to encourage would-be-churners to remain with the company.   
 
-Here is a ROC curve.
+The dataset consisted of 75 potential predictors and 71,047 customers. The data was divided into Calibration and Validation datasets having 40,000 and 31,047 customers respectively. An additional “Churn” variable indicated whether the customer left the company within two-months of observation or stayed. Although, the company had 2% churners at the time, to ensure a better estimation of the model, the Calibration dataset had been set to include roughly 50% churners. The validation dataset had the usual 2% churners. 
+***Logistic Regression*** was employed to classify customers as churners or non-churners. The usual procedures were followed for development and model evaluation. The ***Concordance***, ***Gain chart*** and ***Lift Chart** indicated that the model was working satisfactorily and the churn rate was heavily dependent on a customer’s mean overage minutes of use, percentage change in minutes of use, months in service, handsets issued, age of the current equipment, and number of calls made to retention team.
+
+Here is the ROC curve.
           
 <img src="{{ site.url }}{{ site.baseurl }}/images/Logistic/Auc.jpg" alt="ROC Curve">
 
-The R code and the report with the complete model estimation and evaluation can be found [here](https://github.com/SameeraSuhail1/Customer-Attrition-Management).
+Visit the Github Repository [here](https://github.com/SameeraSuhail1/Customer-Attrition-Management).    
+Directly download the final report with complete analysis and results [here](https://github.com/SameeraSuhail1/Customer-Attrition-Management/raw/master/final-output.xlsx).
+
