--- a/_posts/2019-10-04-opv.md
+++ b/_posts/2019-10-04-opv.md
@@ -19,5 +19,6 @@ The idea was to predict the Transmittance or Current Density characteristic usin
 The figure shows the Transmittance characteristic we predicted for a concentration proportion of 1:6:29 for PEDOT:PSS:PFI against an experimentally known characteristic for concentrations 1:6:30. The same analysis was done using Multilayer Perceptrons (MLP) along with Functional Link Neural Networks (FLANN) which allowed for comparision of both these variants of ANN in terms of training times and accuracies.
 
 
-The Python code and the final report with results can be found [here](https://github.com/SameeraSuhail1/ANN-Orgainc-Photovoltaic-Cells).
+Visit Git Repository for the Python code and the final report [here](https://github.com/SameeraSuhail1/ANN-Orgainc-Photovoltaic-Cells).    
+Directly download the report [here](https://github.com/SameeraSuhail1/ANN-Organic-Photovoltaic-Cells/raw/master/Report_Markdown/Report.pdf).    
 The study this project is based on is by [Howells et al.](https://pubs.rsc.org/en/content/articlelanding/2018/ta/c8ta04098b#!divAbstract)
